Added weekly view
